--- a/index.html
+++ b/index.html
@@ -47,9 +47,30 @@
       var item_amount = foods[item].water_use[units].serving;
       var water_use = foods[item].water_use[units].water;
       // var result = "<p>" + serving + " uses " + water_use + " " + units_label + "</p>";
-      var result = "<p class='item-amount'>" + item_amount + "</p><p>requires</p><p class='water-use'>" + water_use + " " + units_label + "</p><p>to produce</p>";
+      // var result = "<p class='item-amount'>" + item_amount + "</p><p>uses</p><p class='water-use'>" + water_use + " " + units_label + "</p><p>to produce</p>";
+      var result = "<p class='item-amount'>" + item_amount + "</p><p class='water-use'>" + water_use + " " + units_label + "</p>";
       $(".result").html(result);
     });
   </script>
+
+  <style>
+    p {
+      margin: 0;
+      font-size: 1.1em;
+    }
+
+    .item-amount {
+      font-size: 2.5em;
+    }
+
+    .water-use {
+      font-size: 4em;
+    }
+
+    .item-amount, .water-use {
+      font-weight: bold;
+      text-transform: uppercase;
+    }
+  </style>
 </body>
 </html>
