Make food list load only for items with older gallon units
Fixes broken loading of foods given new data and new structure
and new data not having gallon units.

--- a/index.html
+++ b/index.html
@@ -31,11 +31,13 @@
     // Load each food
 
     $.each(foods, function(food, food_info) {
-      $('.select-item').append(
-        "<option class='item " + food + "' value='" + food + "'>"
-        + food_info.food_name +
-        "</option>"
-      );
+      if (food_info.water_use.gallons) {
+        $('.select-item').append(
+          "<option class='item " + food + "' value='" + food + "'>"
+          + food_info.food_name +
+          "</option>"
+        );
+      }
     });
 
     // Display water use on user selection
