Add more text to the tool
- Refine styles
- Add instructions and credits

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
 </head>
 
 <body>
-  <div class="water-footprint">
-    <select class="select-item-2">
+  <section class="water-footprint">
+    <header>
+      <h1>How thirsty is your food?</h1>
+      <p class="instructions">Select an item below to display the amount of water used to produce the food.</p>
+
+      <p class="credits">All water footprint statistics are from The Water Footprint Network's <a href="http://waterfootprint.org/en/resources/interactive-tools/product-gallery/">interactive tool</a>.</p>
+    </header>
+
+    <select class="select-item">
     </select>
 
-    <section class="result-2">
+    <section class="result">
       <h1 class="heading"></h1>
       <div class="bulk">
       </div>
@@ -22,7 +29,7 @@
       <div class="no-info">
       </div>
     </section>
-  </div>
+  </section>
 
   <script src="js/calculator.js"></script>
   <link rel="stylesheet" type="text/css" href="css/water-footprint.css" />
