Add viewport settings and basic styling

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
   <title>Water Footprint</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Elizabeth Mitchell">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="js/jquery-1.11.3.min.js"></script>
   <script src="js/foods.js"></script>
   <script src="js/units.js"></script>
