Ensure link opens in new tab

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1>How thirsty is your food?</h1>
       <p class="instructions">Select an item below to display the amount of water used to produce the food.</p>
 
-      <p class="credits">All water footprint statistics are from The Water Footprint Network's <a href="http://waterfootprint.org/en/resources/interactive-tools/product-gallery/">interactive tool</a>.</p>
+      <p class="credits">All water footprint statistics are from The Water Footprint Network's <a href="http://waterfootprint.org/en/resources/interactive-tools/product-gallery/" target="_blank">interactive tool</a>.</p>
     </header>
 
     <select class="select-item">
