--- a/3664.html
+++ b/3664.html
@@ -6,7 +6,14 @@
   <meta name="author" content="Elizabeth Mitchell">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/water-footprint.css" />
+
   <script src="vendor/jquery/jquery-1.11.3.min.js"></script>
+
+  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.min.css" />
+  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.structure.min.css" />
+  <script src="vendor/jquery-ui-autocomplete/jquery-ui.min.js"></script>
+
+  <scipt>
   <script src="js/foods.js"></script>
   <script src="js/units.js"></script>
 </head>
@@ -21,14 +28,13 @@
     </header>
 
     <select class="select-item">
-      <option></option>
     </select>
 
     <section class="result">
       <h1 class="heading"></h1>
-      <div class="bulk-volume">
+      <div class="bulk">
       </div>
-      <div class="bulk-weight">
+      <div class="one-serving">
       </div>
       <div class="no-info">
       </div>
