--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 
     <section class="result">
       <h1 class="heading"></h1>
-      <div class="bulk">
+      <div class="bulk-weight">
+      </div>
+      <div class="bulk-volume">
       </div>
       <div class="one-serving">
       </div>
