Ensure volume is shown

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
     </header>
 
     <select class="select-item">
+      <option></option>
     </select>
 
     <section class="result">
       <h1 class="heading"></h1>
-      <div class="bulk-weight">
-      </div>
       <div class="bulk-volume">
+      </div>
+      <div class="bulk-weight">
       </div>
       <div class="one-serving">
       </div>
