3664: Show list of foods inside input

--- a/3664.html
+++ b/3664.html
@@ -30,6 +30,8 @@
     <select class="select-item">
     </select>
 
+    <input class="choose-item" />
+
     <section class="result">
       <h1 class="heading"></h1>
       <div class="bulk">
