3664: Ensure food item displays with autocomplete

--- a/3664.html
+++ b/3664.html
@@ -6,14 +6,10 @@
   <meta name="author" content="Elizabeth Mitchell">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/water-footprint.css" />
-
   <script src="vendor/jquery/jquery-1.11.3.min.js"></script>
-
   <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.min.css" />
   <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.structure.min.css" />
   <script src="vendor/jquery-ui-autocomplete/jquery-ui.min.js"></script>
-
-  <scipt>
   <script src="js/foods.js"></script>
   <script src="js/units.js"></script>
 </head>
@@ -27,19 +23,19 @@
       <p class="credits">All water footprint statistics are from The Water Footprint Network's <a href="http://waterfootprint.org/en/resources/interactive-tools/product-gallery/" target="_blank">interactive tool</a>.</p>
     </header>
 
-    <select class="select-item">
-    </select>
-
-    <input class="choose-item" />
+    <input class="choose-item" value="" />
 
     <section class="result">
       <h1 class="heading"></h1>
-      <div class="bulk">
+      <div class="bulk-volume">
+      </div>
+      <div class="bulk-weight">
       </div>
       <div class="one-serving">
       </div>
       <div class="no-info">
       </div>
+    </section>
     </section>
   </section>
 
