--- a/3664.html
+++ b/3664.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="css/water-footprint.css" />
   <script src="vendor/jquery/jquery-1.11.3.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.min.css" />
-  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui-autocomplete/jquery-ui.structure.min.css" />
+  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui/jquery-ui.min.css" />
+  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui/jquery-ui.structure.min.css" />
+  <link rel="stylesheet" type="text/css" href="vendor/jquery-ui/jquery-ui.theme.min.css" />
   <script src="vendor/jquery-ui-autocomplete/jquery-ui.min.js"></script>
   <script src="js/foods.js"></script>
   <script src="js/units.js"></script>
