3664: Add description of feature

--- a/food-autocomplete.html
+++ b/food-autocomplete.html
@@ -16,6 +16,10 @@
 </head>
 
 <body>
+  <h1>Water Footprint Tool</h1>
+  <p>This features uses jQuery UI autocomplete for text prediction in choosing foods.</p>
+  <p>Alternative: <a href="index.html">default functionality</a></p>
+
   <section class="water-footprint">
     <header>
       <h1>How thirsty is your food?</h1>
