--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <h1>Water Footprint Tool</h1>
+  <p>Alternative Feature: <a href="food-autocomplete.html">text prediction</a></p>
+
   <section class="water-footprint">
     <header>
       <h1>How thirsty is your food?</h1>
